apps/forgejo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  # labels:
  #   istio.io/dataplane-mode: ambient
  #   istio.io/use-waypoint: shared-waypoint
  #   istio.io/use-waypoint-namespace: istio-system
